<resources>
    <string name="app_name">FisioVideos</string>
    <string name="hint_person_name">Nombre</string>
    <string name="hint_person_email">Correo</string>
    <string name="hint_person_provider">Proveedor</string>
    <string name="main_menu_signOut">Cerrar Sesión</string>
    <string name="text_person_button">Ver Videos</string>
    <string name="hint_person_title">BIENVENIDO!</string>
    <string name="ir_al_men">Ir al menú</string>
    <string name="thumbnail_del_ejercicio_de_terapia">Thumbnail del ejercicio de terapia</string>
    <string name="t_tulo">Título</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ver_v_deo_en_360">Ver Vídeo en 360</string>
    <string name="lista_de_v_deos">Lista de Vídeos</string>
</resources>
