<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_person_title"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPhotoProfile"
        android:layout_width="@dimen/person_img_size"
        android:layout_height="@dimen/person_img_size"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="8dp"
        app:civ_border_color="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

    <TextView
        android:id="@+id/tvUserName"
        android:hint="@string/hint_person_name"
        app:layout_constraintTop_toBottomOf="@id/imgPhotoProfile"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextViewBase"/>

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TextViewBase"
        android:hint="@string/hint_person_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

    <TextView
        android:id="@+id/tvProvider"
        style="@style/TextViewBase"
        android:hint="@string/hint_person_provider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <Button
        android:id="@+id/signupBtn"
        style="@style/TextViewBase"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:onClick="goToVideoListView"
        android:text="@string/text_person_button"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProvider" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:onClick="goToRegistrarPaciente"
        android:text="Registrar Personas"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

    <Button
        android:id="@+id/subirbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:onClick="goToVideoCreateView"
        android:text="Registrar Vídeos"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>